FIX (Accordion mobile) Accordion mobile javascript working, minus scss

--- a/src/patterns/accordion-mobile/_accordion-mobile.scss
+++ b/src/patterns/accordion-mobile/_accordion-mobile.scss
@@ -1,24 +1,186 @@
-.accordion-group {
-    list-style-type: none;
+/*********************************/
+/* BEGIN Pattern: accordion      */
+/*********************************/
+
+.accordion-mobile-item {
+    border-top: 1px solid $sta-grey;
+    border-bottom: 1px solid $sta-grey;
+    margin-bottom:25px;
+}
+
+.accordion-mobile-group {
+    clear: both;
+    list-style: none;
+    margin: 0 0 ms(1) 0;
     padding: 0;
+
+    .accordion-mobile-item {
+        margin-bottom: 0;
+    }
+
+    .accordion-mobile-item + .accordion-mobile-item {
+        border-top: 0;
+    }
+
+    //Change nested list style to match top level lists
+    ul {
+        list-style-type: disc;
+
+        ul {
+            list-style-type: circle;
+        }
+    }
+    ul, ol {
+        margin-bottom: 25px;
+
+        ul, ol {
+            margin-bottom: 0;
+        }
+    }
 }
 
-.accordion-item {
-    border: 1px solid #ddd;
-    margin-bottom: 10px;
+.accordion-mobile-group__toggle {
+    background: none;
+    border: 0;
+    color: $sta-blue-light;
+    float: right;
+    margin:0 0 0.5rem 0;
+    outline: none;
+    padding: 0;
+    text-decoration: underline;
+    text-underline-offset: 0.15em;
+
+    &:hover {
+        // Remove underline when hovered
+        text-decoration: none;
+        color: $sta-blue-light-shade25;
+    }
+
+    &:focus {
+        // Apply contrast
+        background: $sta-orange-highlight;
+        box-shadow: 0 3px $sta-orange-highlight;
+        color: $sta-grey-dark;
+        text-decoration: underline;
+        outline: 3px solid $sta-orange-highlight;
+    }
 }
 
-.accordion-item__toggle {
-    background: #f5f5f5;
-    padding: 10px;
+.accordion-mobile-item__toggle {
     cursor: pointer;
+    padding: 0.8em 3em 0.8em 15px; // Additional padding on right to accommodate chevron
+    position: relative;
+
+    &:hover,
+    &:focus,
+    &:focus-within {
+        // Add underline to button
+            .accordion-mobile-item__toggle-button {
+                text-decoration: underline;
+                outline: none;
+            }
+
+    }
+
+    &:focus,
+    &:focus-within {
+        //background-color: $sta-grey-light;
+        outline: 3px solid $sta-orange-highlight;
+    }
+
+    // Chevron icon
+    &:before {
+        @extend .fa;
+        @extend .fa-chevron-down;
+        color: $text-color;
+        @include ms-respond(font-size,1);
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 1rem;
+    }
+
+    &.open:before {
+        @extend .fa-chevron-up;
+    }
 }
 
-.accordion-item__toggle-title {
-    margin: 0;
+.accordion-mobile-item__toggle-title {
+    @include ms-respond(font-size,1);
+    line-height: 1.3;
+    font-weight: bold;
+    margin: 0 !important;
 }
 
-.accordion-item__content {
+.accordion-mobile-item__toggle-button {
+    background: none;
+    border: 0;
+    box-shadow: none;
+    color: $sta-blue-light;
+    padding: 0;
+    text-align: left;
+    text-underline-offset: 0.15em;
+
+    &:hover {
+        // Add underline when hovered
+        text-decoration: underline;
+        color: $sta-blue-light-shade25;
+    }
+
+    &:focus {
+        text-decoration: underline;
+        outline: none;
+    }
+
+    &:active {
+        // Apply contrast
+        color: $sta-grey-dark;
+        background: $sta-orange-highlight;
+        box-shadow: 0 3px $sta-orange-highlight;
+        text-decoration: underline;
+        outline: 3px solid $sta-orange-highlight;
+    }
+}
+
+.accordion-mobile-item__toggle-intro {
+    color: $sta-grey;
+    margin: 0.25rem 0 0 0;
+}
+
+.accordion-mobile-item__toggle-keyfact {
+    color: $sta-grey;
+    display: inline-block;
+    margin: 0.25rem 1em 0 0;
+
+    .fa {
+        margin-right:0.5rem;
+    }
+
+    @media (max-width: 400px) {
+        // Stack keyfacts on small displays
+        display: block;
+        margin-right: 0;
+        padding-left: ms(2);
+        position: relative;
+
+        .fa {
+            position: absolute;
+            left: 0;
+            top: 3px;
+        }
+    }
+
+}
+
+.accordion-mobile-item__content {
     display: none;
-    padding: 10px;
+    padding: 15px;
+
+    &.remove-outer-padding {
+        padding: 0;
+    }
 }
+
+/*********************************/
+/* END Pattern: accordion        */
+/*********************************/
